# safe_spatial_stats

./: .gitignore  .lintr  LICENSE.txt  README.md  pre-commit-config.yaml  pyproject.toml  r_requirements.R
R/: download_script.R  narrowing_functions.R  pca.R  plotting_functions.R
analysis/detailed_carbon_data_search/: carbon_plot_data.R
analysis/nutrient_analysis/: generate_combined_dataset.R
analysis/subplot_selection/: download_script.R  pca_space_division.R
