[tool.poetry]
authors = [
  "Jacob Cook <j.cook17@imperial.ac.uk>",
]
description = "A repository for R analysis code related to the 2024 SAFE soil nutrients campaign"
license = "BSD-3-Clause"
name = "safe_spatial_stats"
package-mode = false
readme = "README.md"
repository = "https://github.com/jacobcook1995/safe_spatial_stats"
version = "0.1.0"

[tool.poetry.dependencies]
pre-commit = "^4.1.0"
python = ">=3.10,<3.14"
ruff = "^0.9.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "D", # pydocstyle
  "I", # isort
  "UP", # pyupgrade
  "RUF", # ruff-only checking
  "NPY201", # Numpy 2.0.1
]

# On top of the Google convention, disable:
ignore = [
  "D202", # Blank line after docstring is ok
  "D107", # Location of __init__ docstring in class not __init__"
]
